fix: adjusted wonky whitespace and border radii.

--- a/src/components/DepartureBoardItem/DepartureBoardItem.module.css
+++ b/src/components/DepartureBoardItem/DepartureBoardItem.module.css
@@ -3,9 +3,9 @@
 	align-items: center;
 	justify-content: space-between;
 	background: none;
-	padding: 2rem 1rem;
+	height: 4rem;
 	width: 100%;
-	margin: 0;
+	flex-shrink: 0;
 }
 
 .container:hover {
