--- a/src/components/StopListItem/StopListItem.module.css
+++ b/src/components/StopListItem/StopListItem.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-between;
 	background: none;
-	padding: 2rem 0.5rem;
+	padding: 1rem 0.5rem;
 	width: 100%;
 }
 
