--- a/src/components/common/Button/Button.module.css
+++ b/src/components/common/Button/Button.module.css
@@ -9,7 +9,7 @@
 	border-radius: var(--border-radius-sm);
 	font-size: 1rem;
 	font-weight: 500;
-	height: 2.75rem;
+	min-height: 2.75rem;
 	min-width: 2.75rem;
 	background: var(--elevatedbg);
 	transition-duration: var(--transition-duration-mid);
